--- a/IOCP/Client_IOCP/Client_IOCP.vcxproj
+++ b/IOCP/Client_IOCP/Client_IOCP.vcxproj
@@ -129,12 +129,18 @@
   <ItemGroup>
     <ClCompile Include="Avoid.cpp" />
     <ClCompile Include="Client.cpp" />
+    <ClCompile Include="FallClass.cpp" />
+    <ClCompile Include="Falls.cpp" />
+    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameResult.cpp" />
+    <ClCompile Include="map.cpp" />
+    <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="Render.cpp" />
     <ClCompile Include="source.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.h" />
-    <ClInclude Include="map.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
