Editted in class room

--- a/IOCP/Server_IOCP/Server.vcxproj
+++ b/IOCP/Server_IOCP/Server.vcxproj
@@ -127,7 +127,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GameServer.cpp" />
+    <ClCompile Include="Packet.cpp" />
+    <ClCompile Include="PacketProcess.cpp" />
     <ClCompile Include="Server.cpp" />
+    <ClCompile Include="Player.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="header.h" />
+    <ClInclude Include="PacketHeader.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
